# MangaReader

./: .gitignore  CMakeLists.txt  http.c  http.h  main.c  socketutil.c  socketutil.h  url_list.txt  util.c  util.h
headers/: http.h  socketutil.h
include/openssl/: configuration.h
